Bug 363024 - Calling createInstance() on mozIStorageService crashes.  r=sspitzer